# SLRT

./: .gitignore  README.md
Spoken2Sign/: .gitignore  LOG.md  app.py  demo.ipynb  devshell.toml  docker-compose.yaml  flake.nix  motion_gen.py  pixi.toml  pyproject.toml  render_avatar.ipynb  service.py  shell.nix  tgm.py  worker.py
Spoken2Sign/cfg_files/: fit_smplsignx_tvb.yaml
Spoken2Sign/text2gloss/: app.py  demo.ipynb  extract_feature.py  prediction.py  service.py
Spoken2Sign/text2gloss/configs/: T2G_csl.yaml  T2G_phoenix.yaml  T2G_tvb.yaml
Spoken2Sign/text2gloss/modelling/: model.py  translation.py
Spoken2Sign/text2gloss/utils/: keypoints_3d_aug.py
Spoken2Sign/vposer/: vposer_smpl.py
TwoStreamNetwork/: .gitignore  app.py  download.sh  pixi.toml  requirements.txt  service.py
TwoStreamNetwork/dataset/: VideoLoader.py
TwoStreamNetwork/experiments/configs/SingleStream/: csl-daily_g2t.yaml  csl-daily_s2g.yaml  csl-daily_s2t.yaml  phoenix-2014t_g2t.yaml  phoenix-2014t_s2g.yaml  phoenix-2014t_s2t.yaml
TwoStreamNetwork/experiments/configs/TwoStream/: csl-daily_s2t_ensemble.yaml  csl-daily_s2t_joint.yaml  csl-daily_s2t_keypoint.yaml  csl-daily_s2t_video.yaml  phoenix-2014t_s2t_ensemble.yaml  phoenix-2014t_s2t_joint.yaml  phoenix-2014t_s2t_keypoint.yaml  phoenix-2014t_s2t_video.yaml
TwoStreamNetwork/utils/: misc.py
